# vtuber-livechat-dataset

./: .env.example  .env.placeholder  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
data/: dataset-metadata.json
datasets/vtuber-livechat/: dataset-metadata.json
datasets/vtuber-superchats/: dataset-metadata.json
notebooks/: livechat-population.ipynb  livechat_population.ipynb  membership.ipynb  playground.ipynb  quicklook.ipynb  setup.py  superchat.ipynb
vtlc/: aggregate.py  constants.py  generate.py  notebook.py  postprocess.py  preprocess.py
vtlc/currency_snapshot/: AED  ARS  AUD  BAM  BGN  BOB  BRL  BYN  CAD  CHF  CLP  COP  CRC  CZK  DKK  DOP  EGP  EUR  GBP  GTQ  HKD  HNL  HRK  HUF  IDR  ILS  INR  ISK  JOD  JPY  KRW  MAD  MKD  MXN  MYR  NIO  NOK  NZD  PEN  PHP  (+15 more)
vtlc/util/: currency.py  message.py  superchat.py
