[tool.poetry]
name = "vtuber-livechat-dataset"
version = "1.0.0"
description = "Large Scale Virtual YouTubers Live Chat Dataset"
authors = ["Yasuaki Uechi <y@uechi.io>"]

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.12"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
pandas = "^1.2.3"
pymongo = "^3.11.3"
streamlit = "^0.78.0"
fsspec = "^0.8.7"
plotly = "^4.14.3"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
