[tool.poetry]
name = "vtuber-livechat"
version = "1.0.0"
description = "Large Scale Virtual YouTubers Live Chat Dataset"
authors = ["Yasuaki Uechi <y@uechi.io>"]

[tool.poetry.dependencies]
python = "3.10.3"
kaggle = "^1.5.12"
numpy = "^1.22.4"
pandas = "^1.4.2"
pymongo = "^4.1.1"
python-dateutil = "^2.8.2"
altair = "^4.2.0"
matplotlib = "^3.5.2"
plotly = "^5.9.0"
pyarrow = "^8.0.0"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
nbformat = "^5.4.0"
kaleido = "0.2.1"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
